--- a/stylesheets/all.css
+++ b/stylesheets/all.css
@@ -3437,12 +3437,20 @@ section.project-contact .contact-form {
     width: 100%
 }
 
+@media only screen and (min-width: 700px) {
+    a.toggle-background {
+        position: absolute;
+        top: 10px;
+        left: 25px;
+    }
+}
+
 a.toggle-background {
+    position: absolute;
+    bottom: 10px;
+    right: 25px;
     text-decoration: none;
     color: #fff;
-    position: absolute;
-    top: 10px;
-    left: 25px;
 }
 
 a.toggle-background i {
